<resources>

    <!-- Main -->
    <string name="app_name">Таймер для бокса</string>


    <!-- MainActivity -->
    <string name="main_button__start">START</string>
    <string name="main_txt_timer_selection">Выбор таймера:</string>
    <string name="main_txt_training_duration">Общее время: %d мин</string>
    <!-- MainActivity -->


    <!-- SettingsActivity -->
    <string name="settings_txt_title_timer_selection">Выберите таймер для редактирования:</string>
    <string name="settings_button_create_new_timer">Создать новый таймер</string>
    <string name="settings_txt_dialog_enter_timer_name">Введите название таймера</string>
    <string name="sittings_txt_dialog_remove">Удалить таймер?</string>
    <string name="sittings_txt_darkTheme">Тёмная тема</string>
    <!-- SettingsActivity -->


    <!-- EditingActivity -->
    <string name="editing_txt_dialog_enter_timer_name">Введите название таймера</string>
    <string name="editing_txt_title">Настройки таймера</string>
    <!-- EditingActivity -->


    <!-- RunActivity -->
    <string name="run_txt_title_runUp">Подготовка</string>
    <string name="run_txt_title_start_round">Работа</string>
    <string name="run_txt_title_start_rest">Отдых</string>
    <string name="run_txt_title_round_tracking">%d раунд из %d</string>
    <string name="txt_run_dialog_exit">Завершить тренировку?</string>
    <!-- RunActivity -->


    <!-- Fields names of Timer -->
    <string name="txt_title_name_roundDuration">Длительность раунда</string>
    <string name="txt_title_name_restDuration">Время отдыха</string>
    <string name="txt_title_name_roundQuantity">Количество раундов</string>
    <string name="txt_title_name_runUp">Время на подготовку</string>
    <string name="txt_title_name_noticeOfEndRound">Оповещение об окончании раунда</string>
    <string name="txt_title_name_noticeOfEndRest">Оповещение об окончании отдыха</string>
    <string name="txt_title_name_soundType_of_end_round_notice"
            >Звук предупреждения окончания раунда</string>
    <string name="txt_title_name_soundType_of_end_rest_notice"
            >Звук предупреждения окончания отдыха</string>
    <string name="txt_title_name_soundType_of_start_round">Звук начала раунда</string>
    <string name="txt_title_name_soundType_of_start_rest">Звук начала отдыха</string>


    <!-- Timer Sound -->
    <string name="timer_sound_gong_title">Gong</string>
    <string name="timer_sound_low_gong_title">Low Gong</string>
    <string name="timer_sound_great_gong_title">Great Gong</string>
    <string name="timer_sound_bell_title">Bell</string>
    <string name="timer_sound_warning_title">Warning</string>
    <!-- Timer Sound -->

    <!-- Dialogs -->
    <string name="dialog_but_minus">-</string>
    <string name="dialog_but_plus">+</string>
    <!-- Dialogs -->

    <string name="restart">restart</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>

</resources>