<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.settings.SettingsActivity"
        tools:ignore="ExtraText">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/settings_txt_title_timer_selection"
            android:textSize="30sp"
            android:textStyle="bold" />


    <ListView
            android:id="@+id/list_timers_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/button_new_timer_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings_button_create_new_timer"
            android:textSize="25sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txt_settings_darkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginStart="16dp"
                android:text="@string/sittings_txt_darkTheme" />

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_settings_darkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"/>

    </LinearLayout>

</LinearLayout>