<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        tools:context=".ui.main.MainActivity"
        tools:ignore="ExtraText">


    <TextView
            android:id="@+id/txt_main_roundDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_weight="1"
            android:text="@string/txt_title_name_roundDuration"
            android:textSize="@dimen/textView_name_of_time" />

    <TextView
            android:id="@+id/time_main_roundDuration"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_weight="3"
            android:inputType="time"
            android:text="02:00"
            android:textSize="@dimen/textView_time_size"
            tools:ignore="OnClick,SpUsage,TextViewEdits" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    <TextView
            android:id="@+id/txt_main_restDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/txt_title_name_restDuration"
            android:textSize="@dimen/textView_name_of_time" />

    <TextView
            android:id="@+id/time_main_restDuration"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:inputType="time"
            android:text="01:00"
            android:textSize="@dimen/textView_time_size"
            tools:ignore="OnClick,SpUsage,TextViewEdits" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    <TextView
            android:id="@+id/txt_main_roundQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/txt_title_name_roundQuantity"
            android:textSize="@dimen/textView_name_of_time" />

    <TextView
            android:id="@+id/time_main_roundQuantity"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:inputType="time"
            android:text="8"
            android:textSize="@dimen/textView_time_size"
            tools:ignore="OnClick,SpUsage,TextViewEdits" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    <TextView
            android:id="@+id/txt_main_training_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Общее время: 23 мин"
            android:textSize="@dimen/textView_name_of_time" />

    <Button
            android:id="@+id/button_main_start"
            android:textStyle="bold"
            android:textColor="@color/colorBold"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:background="@drawable/button_start"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/main_button__start"
            android:textSize="@dimen/textView_time_size"
            tools:ignore="SpUsage" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    <TextView
            android:id="@+id/txt_main_change_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/main_txt_timer_selection"
            android:textSize="@dimen/textView_name_of_time" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

        <ImageButton
                android:id="@+id/imgBut_main_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@mipmap/settings" />

        <Spinner
                android:id="@+id/spinner_main_timer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

        <Spinner
                android:id="@+id/spinner_main_timer"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="30dp" />

        <ImageButton
                android:id="@+id/imgBut_main_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="0dp"
                android:background="@null"
                android:src="@mipmap/settings" />
    </LinearLayout>
    -->



</LinearLayout>

